--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<h1 class="main-hed">This webpage is by Ryder</h1>
 
-		<img class="logo" src= "Logo.svg">
+		<img class="logo" src= "Asset 1.svg">
 
 		<p>This is a paragraph. I can alter it to say other things if I want to.</p>
 
