--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 
-		<h1 class="main-hed">This webpage is by Ryder</h1>
+		<h1 class="main-hed">My name is Ryder and I'm miserable</h1>
 
 		<img class="logo" src= "Asset 1.svg">
 
