--- a/Subpage?.html
+++ b/Subpage?.html
@@ -10,7 +10,7 @@
 
 	<body>
 
-		<h1 class="main-hed">This subpage is by Ryder</h1>
+		<h1 class="main-hed">This subpage is by Ryder.<a href=“x.html”>link to homepage</a></h1>
 
 		<img class="logo" src="logo.svg">
 
