--- a/subpage.html
+++ b/subpage.html
@@ -12,11 +12,14 @@
 
 		<h1 class="main-hed">This subpage is by Ryder</h1>
 
-		<img class="logo" src="logo.svg">
+		<img class="logo" src="asset-1.svg">
+		<img class="logo" src="6edit.jpg">
 
-		<p>This is a subpage. I had to make a subpage.</p>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu volutpat odio facilisis mauris sit amet massa. Pretium aenean pharetra magna ac placerat vestibulum. Nisi porta lorem mollis aliquam. Vel quam elementum pulvinar etiam non quam lacus suspendisse. Ornare lectus sit amet est placerat. Ut tellus elementum sagittis vitae et leo duis ut diam. Viverra accumsan in nisl nisi scelerisque eu. Viverra nam libero justo laoreet. Diam sollicitudin tempor id eu nisl. Mauris sit amet massa vitae tortor condimentum lacinia. Ut faucibus pulvinar elementum integer enim neque. Mauris pharetra et ultrices neque. Turpis egestas maecenas pharetra convallis. Massa enim nec dui nunc mattis enim ut tellus. Interdum posuere lorem ipsum dolor sit amet consectetur adipiscing.</p>
+		<p>This is a subpage. I had to make a subpage. The subpage has given me a hard time but I believe we are going to make it out okay</p>
+    <img class="logo" src="boob.jpeg"
+
+		<p> To learn more about me, please visit <a href="index.html"> my homepage </a></p>
 
 		<p>Eu nisl nunc mi ipsum faucibus. Lectus arcu bibendum at varius vel pharetra vel. Mauris pharetra et ultrices neque ornare aenean euismod elementum nisi. Aliquet risus feugiat in ante metus. Est velit egestas dui id ornare arcu. Nec nam aliquam sem et. Ultricies tristique nulla aliquet enim tortor at. Consequat nisl vel pretium lectus quam id leo. Orci phasellus egestas tellus rutrum tellus pellentesque. Posuere ac ut consequat semper. Ut consequat semper viverra nam libero justo laoreet. Euismod elementum nisi quis eleifend quam adipiscing vitae proin.</p>
 
