--- a/subpage.html
+++ b/subpage.html
@@ -16,7 +16,7 @@
 		<img class="logo" src="6edit.jpg">
 
 
-		<p>This is a subpage. I had to make a subpage. The subpage has given me a hard time but I believe we are going to make it out okay</p>
+		<p>This is a subpage. I had to make a subpage. The subpage has given me a hard time but I believe we are going to make it out okay 👹</p>
     <img class="logo" src="boob.jpeg"
 
 		<p> To learn more about me, please visit <a href="index.html"> my homepage </a></p>
