--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h1 class="main-hed">My name is Ryder and I'm miserable</h1>
 			<p> Take a look at <a href="subpage.html"> my subpage </a></p>
 
-		<img class="logo" src= "Asset 1.svg">
+		<img class="logo" src= "asset-1.svg">
 
 		<p>This is a paragraph. I can alter it to say other things if I want to.</p>
 
