--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 		<p>This is a paragraph. I can alter it to say other things if I want to.</p>
 
+		<p> Take a look at <a href= https://github.com/RyderKramer/jdtoolkit-homepage> my github </a></p>
+
 		<p> I have had a tricky time putting all of this together so you are obligated to appreciate and admire it.</p>
 
 		<p>Take a look at a video I made while cooped up in my house amidst a pandemic <a href="bunny.MOV"></p>
