--- a/subpage.html
+++ b/subpage.html
@@ -13,10 +13,8 @@
 		<h1 class="main-hed">This subpage is by Ryder</h1>
 
 		<p>This is a subpage. I had to make a subpage. The subpage has given me a hard time but I believe we are going to make it out okay 👹 </p>
-    <img class="logo" src="boob.jpeg"
-
+    <img class="logo" src="boob.jpeg">
 		<img class="logo" src="asset-1.svg">
-
 		<img class="logo" src="6edit.jpg">
 
 
