--- a/subpage.html
+++ b/subpage.html
@@ -14,8 +14,11 @@
 
 		<p>This is a subpage. I had to make a subpage. The subpage has given me a hard time but I believe we are going to make it out okay 👹 </p>
     <img class="logo" src="boob.jpeg">
+		<p> Boob was a flyer I had made in Premier<p>
 		<img class="logo" src="asset-1.svg">
+		<p> A logo I had created in Illustrator
 		<img class="logo" src="6edit.jpg">
+		<p> A photo I took an made edits to for an assigment<p>
 
 
 
