--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<img class="logo" src= "asset-1.svg">
 
-		<p>This is a paragraph. I can alter it to say other things if I want to.</p>
+		<p>This is a paragraph. I can alter it to say other things if I want to. I created this website for Journalism and Design Toolkit.</p>
 
 		<p> Take a look at <a href= https://github.com/RyderKramer/jdtoolkit-homepage> my github </a></p>
 
