--- a/subpage.html
+++ b/subpage.html
@@ -12,7 +12,7 @@
 
 		<h1 class="main-hed">This subpage is by Ryder</h1>
 
-		<p>This is a subpage. I had to make a subpage. The subpage has given me a hard time but I believe we are going to make it out okay 👹 </p>
+		<p>This is a subpage was created for Jounalism and Design Toolkit. I had to make a subpage. The subpage has given me a hard time but I believe we are going to make it out okay 👹 </p>
     <img class="logo" src="boob.jpeg">
 		<p> Boob was a flyer I had made in Premier<p>
 		<img class="logo" src="asset-1.svg">
