--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<p> I have had a tricky time putting all of this together so you are obligated to appreciate and admire it.</p>
 
-		<p>Take a look at a video I made while cooped up in my house amidst a pandemic <a href="https://youtu.be/35FZiXVU1CM"> on my youtube </a></p> <iframe width="560" height="315" src="https://www.youtube.com/embed/35FZiXVU1CM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<p>Take a look at a video I made while cooped up in my house amidst a pandemic <a href="video.html">
 
 	</body>
 
