--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 		<p> I have had a tricky time putting all of this together so you are obligated to appreciate and admire it.</p>
 
-		<p>Take a look at a video I made while cooped up in my house amidst a pandemic <a href="video.html">
+		<p>Take a look at a video I made while cooped up in my house amidst a pandemic <a href="video.html"> my youtube </a></p>
+		
 
 	</body>
 
