--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
 
 		<img class="logo" src= "asset-1.svg">
 
+
+<html>
+<body>
+
+<p>
+This is a link to <a href="map.html">A map</a>.
+</p>
+
+<p>
+This is a link to a video <a href="video.html">social distance</a>.
+</p>
+
+</body>
+</html>
+
 		<p>This is a paragraph. I can alter it to say other things if I want to. I created this website for Journalism and Design Toolkit.</p>
 
 		<p> Take a look at <a href= https://github.com/RyderKramer/jdtoolkit-homepage> my github </a></p>
