--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 	<body>
 
 		<h1 class="main-hed">My name is Ryder and I'm miserable</h1>
-			<p> Take a look at <a href="subpage.html"> my subpage </a></p>
+
 
 		<img class="logo" src= "asset-1.svg">
 
 
 
-		<p>This is a paragraph. I can alter it to say other things if I want to. I created this website for Journalism and Design Toolkit.</p>
+		<p>This is a paragraph. I can alter it to say other things if I want to. I created this website for Journalism and Design Toolkit.I have had a tricky time putting all of this together so you are obligated to appreciate and admire it.</p>
 
 		<p> Take a look at <a href= https://github.com/RyderKramer/jdtoolkit-homepage> my github </a></p>
 
-		<p> I have had a tricky time putting all of this together so you are obligated to appreciate and admire it.</p>
+		<p> Take a look at <a href="subpage.html"> my subpage </a></p>
 
 		<p>Take a look at a video I made while cooped up in my house amidst a pandemic <a href="video.html"> my youtube </a></p>
 
