--- a/subpage.html
+++ b/subpage.html
@@ -19,7 +19,7 @@
 		<img class="logo" src="asset-1.svg">
 		<p> A logo I had created in Illustrator
 		<img class="logo" src="6edit.jpg">
-		<p> A photo I took an made edits to for an assigment<p>
+		<p> A photo I took and made edits to for an assigment<p>
 
 
 
