--- a/subpage.html
+++ b/subpage.html
@@ -12,14 +12,14 @@
 
 		<h1 class="main-hed">This subpage is by Ryder</h1>
 
-		<p>This subpage was created for Jounalism and Design Toolkit. I had to make a subpage. The subpage has given me a hard time but I believe we are going to make it out okay 👹 </p>
-    <img class="logo" src="boob.jpeg">
-		<p> Boob was a flyer I had made in Premier<p>
-			<img class="logo" src="boob.pdf">
-		<img class="logo" src="asset-1.svg">
-		<p> A logo I had created in Illustrator
-		<img class="logo" src="6edit.jpg">
-		<p> A photo I took and made edits to for an assigment<p>
+		<p>This subpage was created for Jounalism and Design Toolkit. I had to make a subpage. The subpage has given me a hard time but I believe we are going to make it out okay 👹. In the subpage there are three assignments listed.</p>
+
+		<a href="boobsubpage.html"> boob flyer </a></p>
+
+		<a href="asset1.html"> Logo</a><p>
+
+		<a href="edit.html"> Photo edit </a></p>
+
 
 
 
