--- a/subpage.html
+++ b/subpage.html
@@ -14,9 +14,9 @@
 
 		<p>This subpage was created for Jounalism and Design Toolkit. I had to make a subpage. The subpage has given me a hard time but I believe we are going to make it out okay 👹. In the subpage there are three assignments listed.</p>
 
-		<a href="boobsubpage.html"> boob flyer </a></p>
+		<a href="boobsubpage.html"> Boob Flyer </a></p>
 
-		<a href="asset1.html"> Logo</a><p>
+		<a href="asset1.html"> Logo </a><p>
 
 		<a href="edit.html"> Photo edit </a></p>
 
