--- a/subpage.html
+++ b/subpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<head>
+	<head><link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap" rel="stylesheet">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title> Ryder's subpage for Journalism Design Toolkit</title>
@@ -14,11 +14,11 @@
 
 		<p>This subpage was created for Jounalism and Design Toolkit. I had to make a subpage. The subpage has given me a hard time but I believe we are going to make it out okay 👹. In the subpage there are three assignments listed.</p>
 
-		<a href="boobsubpage.html">Boob Flyer</a></p>
+		<a href="boobsubpage.html"> Boob Flyer </a></p>
 
-		<a href="asset1.html">Logo</a><p>
+		<a href="asset1.html"> Logo </a><p>
 
-		<a href="edit.html">Photo Edit</a></p>
+		<a href="edit.html"> Photo edit </a></p>
 
 
 
