--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<head><link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap" rel="stylesheet">
+	<head> link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap" rel="stylesheet"</head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Ryder Homepage for Journalism Design Toolkit</title>
@@ -15,7 +15,7 @@
 
 		<img class="logo" src= "asset-1.svg">
 
-
+<h1 id="title" class="title">Accessible Rich Internet Applications (WAI-ARIA) 1.2</h1>
 
 		<p>This is a paragraph. I can alter it to say other things if I want to. I created this website for Journalism and Design Toolkit.I have had a tricky time putting all of this together so you are obligated to appreciate and admire it.</p>
 
