--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<head> link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap" rel="stylesheet"</head>
+	<headlink href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap" rel="stylesheet">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Ryder Homepage for Journalism Design Toolkit</title>
@@ -15,18 +15,19 @@
 
 		<img class="logo" src= "asset-1.svg">
 
-<h1 id="title" class="title">Accessible Rich Internet Applications (WAI-ARIA) 1.2</h1>
-
 		<p>This is a paragraph. I can alter it to say other things if I want to. I created this website for Journalism and Design Toolkit.I have had a tricky time putting all of this together so you are obligated to appreciate and admire it.</p>
 
-		<p> Take a look at <a href= https://github.com/RyderKramer/jdtoolkit-homepage> my github </a></p>
+				<p> Take a look at <a href= https://github.com/RyderKramer/jdtoolkit-homepage> my github </a></p>
 
-		<p> Take a look at <a href="subpage.html"> my subpage </a></p>
+				<p> Take a look at <a href="subpage.html"> my subpage </a></p>
 
-		<p>Take a look at a video I made while cooped up in my house amidst a pandemic <a href="video.html"> my youtube </a></p>
+				<p>Take a look at a video I made while cooped up in my house amidst a pandemic <a href="video.html"> my youtube </a></p>
 
-		<p> A map of where I am located <a href= "map.html"> Atlanta, Georgia</a></p>
+				<p> A map of where I am located <a href= "map.html"> Atlanta, Georgia</a></p>
 
-	</body>
+			</body>
+
+		</html>
+
 
 </html>
