--- a/subpage.html
+++ b/subpage.html
@@ -18,14 +18,6 @@
 	<a href="boobsubpage.html"> Boob Flyer </a></p>
 	<a href="asset1.html"> Logo </a></p>
   <a href="edit.html"> Photo edit </a></p>
-
-
-
-
-	<p> To learn more about me, please visit <a href="index.html"> my homepage </a></p>
-
-		<p> </p>
-
-	</body>
+  <a href="Life of Ryder Final.indd"> Big Booklet Final </a></p>
 
 </html>
