--- a/subpage.html
+++ b/subpage.html
@@ -18,6 +18,6 @@
 	<a href="boobsubpage.html"> Boob Flyer </a></p>
 	<a href="asset1.html"> Logo </a></p>
   <a href="edit.html"> Photo edit </a></p>
-  <a href="Life of Ryder Final.indd"> Big Booklet Final </a></p>
+  <a href="Life of Ryder (Finished).pdf"> Big Booklet Final </a></p>
 
-</html>
+</html>	<p> Take a look at <a href="index.html"> my homepage </a></p>
